# DOOM_openGL

./: .gitignore  CMakeLists.txt  README.md  build_error_camera.txt  build_log.txt  check_gl_lumps.cpp  list_lumps.cpp
assets/shaders/: fragment.glsl  vertex.glsl
include/: Camera.h  InputHandler.h  Map.h  MapData.h  Movement.h  RTLighting.h  Scene.h  WADParser.h
include/glad/: glad.h
src/: InputHandler.cpp  Map.cpp  Movement.cpp  RTManager.cpp  Scene.cpp  WADParser.cpp  glad.c  main.cpp
